--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "Dongho Choi"
 title: "Dongho Choi"
 pagetitle: "Dongho Choi"
 base_url: https://tomchoi91.github.io/
-google_analytics: "" # e.g. "UA-XXXXXXXXX-1", GA tracking code
+google_analytics: "G-SLLLRP8S6W" # e.g. "UA-XXXXXXXXX-1", GA tracking code
 output_dir: "."
 navbar:
   title: "Dongho Choi"
