--- a/_site.yml
+++ b/_site.yml
@@ -15,6 +15,8 @@ navbar:
       #   href: stat1.html
       - text: "Propensity Score Matching"
         href: stat2.html
+      - text: "Structural Equation Modeling"
+        href: stat3.html
     # - text: "DB/SQL"
     #   menu: 
     #   - text: "Movie Explorer"
